--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>first git project</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm Argdeal and I've hosted with GitHub Pages!</p>
+    <h1>hello git</h1>
 </body>
 </html>
